编辑器添加RSS展示
