# api-docs/openapi/v3_0/pluginFriendsApi.json
@@ -5,7 +5,7 @@
     "version" : "2.19.0"
   },
   "servers" : [ {
-    "url" : "http://localhost:57881",
+    "url" : "http://localhost:38489",
     "description" : "Generated server url"
   } ],
   "security" : [ {
@@ -115,7 +115,7 @@
             "content" : {
               "*/*" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/RssDetailList"
+                  "$ref" : "#/components/schemas/RssDetail"
                 }
               }
             },
@@ -967,56 +967,6 @@
         "properties" : {
           "channel" : {
             "$ref" : "#/components/schemas/Channel"
-          }
-        },
-        "description" : "A chunk of items."
-      },
-      "RssDetailList" : {
-        "required" : [ "first", "hasNext", "hasPrevious", "items", "last", "page", "size", "total", "totalPages" ],
-        "type" : "object",
-        "properties" : {
-          "first" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page is the first page."
-          },
-          "hasNext" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page has previous page."
-          },
-          "hasPrevious" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page has previous page."
-          },
-          "items" : {
-            "type" : "array",
-            "description" : "A chunk of items.",
-            "items" : {
-              "$ref" : "#/components/schemas/RssDetail"
-            }
-          },
-          "last" : {
-            "type" : "boolean",
-            "description" : "Indicates whether current page is the last page."
-          },
-          "page" : {
-            "type" : "integer",
-            "description" : "Page number, starts from 1. If not set or equal to 0, it means no pagination.",
-            "format" : "int32"
-          },
-          "size" : {
-            "type" : "integer",
-            "description" : "Size of each page. If not set or equal to 0, it means no pagination.",
-            "format" : "int32"
-          },
-          "total" : {
-            "type" : "integer",
-            "description" : "Total elements.",
-            "format" : "int64"
-          },
-          "totalPages" : {
-            "type" : "integer",
-            "description" : "Indicates total pages.",
-            "format" : "int64"
           }
         }
       },
